--- a/config/config.env.example
+++ b/config/config.env.example
@@ -4,5 +4,5 @@ PORT=5000
 
 MONGO_URI=
 
-GEOCODER_PROVIDER=mapquest
-GEOCODER_API_KEY=UGXgIgx9d5LjzIHZK3jHMmAsnOgSGVxN
+GEOCODER_PROVIDER=
+GEOCODER_API_KEY=
