--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
     "node-geocoder": "^3.25.0",
     "slugify": "^1.3.6"
