--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
     "node-geocoder": "^3.25.0",
+    "nodemailer": "^6.4.6",
     "slugify": "^1.3.6"
   },
   "devDependencies": {
