--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "express-mongo-sanitize": "^2.0.0",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
     "node-geocoder": "^3.25.0",
